--- a/sass/index.scss
+++ b/sass/index.scss
@@ -3,18 +3,120 @@
 
 @import "bootstrap";
 
-.col-sm-3 {
-	background: green;
+.main-body {
+	background-color: #c4c4c4;
+	max-width: 100%;
 }
 
-.col-sm-9 {
-	background: black;
+.header {
+	margin: 0 auto; 
+	margin-top: 80px;
+	margin-bottom: 80px;
+	width: 90vw;
+	height: 40vh;
+	background-color: white;
 }
 
-h1 {
-	color: blue;
+.welcome {
+	margin: 0 auto;
+	width: 100vw;
+	max-width: 100%;
+	background-color: white;
+	.welcome-left {
+		padding: 15px;
+	}
+	.welcome-left {
+		h1 {
+			font-color: black;
+		}
+		p {
+			font-size: 14pt;
+		}
+	}
+	.welcome-right {
+		height: 100%;
+		max-height:500px;
+		padding: 15px;
+		overflow: hidden;
+		img {
+ 			width: 100%;
+			height: 100%;
+		}
+	}
 }
 
-h2 { 
-color: white;
+h2 {
+	margin-top:80px;
+	color: #444444;
+	text-align: center;
+	font-size: 32pt;
+}
+
+.carousel {
+	margin: 0 auto;
+	margin-bottom: 80px;
+	width: 90vw;
+	height: 400px;
+	background-color: white;
+}
+
+.blag {
+	margin: 0 auto;
+	margin-bottom: 80px;
+	width: 90vw;
+	height: 90vh;
+	min-height: 600px;
+	background-color: white;
+	.section {
+		background-color: white;
+		height: 45vh;
+		min-height: 300px;
+		.travel {
+			background-color: afbfd8;
+			height: 90%;
+			width: 90%;
+			margin: 0 auto;
+			margin-top:10px;
+		}
+		.career {
+			background-color: afbfd8;
+			height: 90%;
+			width: 90%;
+			margin: 0 auto;
+			margin-top: 10px;
+
+		}
+		.life {
+			background-color: afbfd8;
+			height: 90%;
+			width: 90%;
+			margin: 0 auto;
+			margin-bottom: 10px;
+		}
+		.minimalism {
+			background-color: afbfd8;
+			height: 90%;
+			width: 90%;		
+			margin: 0 auto;
+			margin-bottom: 10px;
+		}
+	}
+}
+
+.subscribe {
+	max-width:100%;
+	.subscribe-box {
+		background-color: #c4c4c4;
+	}
+	h1 {
+		font-size: 40pt;
+		text-align: center;
+	}
+	p {
+		font-size: 14pt;
+		text-align: center;
+	}
+	h4 {
+		text-align: center;
+	}
 }
