Fixed Width & Set Layouts

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -72,14 +72,14 @@ h2 {
 		height: 45vh;
 		min-height: 300px;
 		.travel {
-			background-color: afbfd8;
+			background-color: #afbfd8;
 			height: 90%;
 			width: 90%;
 			margin: 0 auto;
 			margin-top:10px;
 		}
 		.career {
-			background-color: afbfd8;
+			background-color: #afbfd8;
 			height: 90%;
 			width: 90%;
 			margin: 0 auto;
@@ -87,14 +87,14 @@ h2 {
 
 		}
 		.life {
-			background-color: afbfd8;
+			background-color: #afbfd8;
 			height: 90%;
 			width: 90%;
 			margin: 0 auto;
 			margin-bottom: 10px;
 		}
 		.minimalism {
-			background-color: afbfd8;
+			background-color: #afbfd8;
 			height: 90%;
 			width: 90%;		
 			margin: 0 auto;
