--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -5,11 +5,15 @@
 
 <head>
 <link rel="stylesheet" href="{{ site.baseurl }}/sass/default.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/sass/blog.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/sass/navbar.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/sass/footer.css">
 </head>
 
 {% include navbar.html %}
+<br>
+<br>
+<br>
 
 <div class="row">
 <div class="col-sm-8 content">
