--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,10 +1,8 @@
 ---
 ---
 
-@import "bootstrap";
-
 .main-body {
-	background-color: #c4c4c4;
+	background-color: #e2e2e2;
 	max-width: 100%;
 }
 
@@ -41,6 +39,7 @@
 		img {
  			width: 100%;
 			height: 100%;
+			max-height: 440px;
 		}
 	}
 }
@@ -106,7 +105,9 @@ h2 {
 .subscribe {
 	max-width:100%;
 	.subscribe-box {
-		background-color: #c4c4c4;
+		background-color: #e2e2e2;
+		height: 300px;
+		margin-bottom: 20px;
 	}
 	h1 {
 		font-size: 40pt;
