--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,40 +1,40 @@
 
-
-<h1> Catagories </h1>
-<h2> Travel </h2>
-<h2> Life </h2>
-<h2> Career </h2>
-<h2> Minimalism </h2>
+<link rel="stylesheet" href="{{ site.baseurl }}/sass/sidebar.css">
+<div class="sidebar">
+  <h1> Categories </h1>
+<h2> <a href="#">Travel</a> </h2>
+<h2> <a href="#">Life</a> </h2>
+<h2> <a href="#">Career</a> </h2>
+<h2> <a href="#">Minimalism</a> </h2>
 
 <br>
-<h5> cool thingy </h5>
+<hr>
 <br>
 
-<h3> About Me </h3>
+<h1> About Me </h1>
 <img src= "{{ site.baseurl }}/assets/images/pic-1.jpg">
-<p> In this area, I'll introduce a short description about myself. Try not to be weird about it. Anyway, this will be a little bit about me. And how it connects to the blog and stuffs. 
+<p> In this area, I'll introduce a short description about myself. Try not to be weird about it. Anyway, this will be a little bit about me. And how it connects to the blog and stuffs.
 </p>
 
 <br>
-<h5> cool thingy </h5>
+<hr>
 <br>
 
-<h4> Lets Connect </h4>
+<h1> Lets Connect </h1>
 <p> button button button button </p>
 
 <br>
-<h5> cool thingy </h5>
-
+<hr>
 <br>
-<h4> Insta Feed </h4>
+<h1> Insta Feed </h1>
 <p> insta insta </p>
 <p> insta insta </p>
 
 <br>
-<h5> cool thingy </h5>
+<hr>
 <br>
 
-<h4> subscribe </h4>
+<h1> subscribe </h1>
 <p> Want more? Enter your email for updates on the lastest articles and stuff!
 </p>
 <p> sub bar here </p>
@@ -48,3 +48,4 @@
 
 <br>
 
+</div>
