--- a/sass/blog.scss
+++ b/sass/blog.scss
@@ -2,8 +2,52 @@
 ---
 @import "bootstrap";
 
+@font-face
+{
+font-family: Code;
+src: url('{{ site.baseurl }}/assets/fonts/CODE_Bold.woff');
+}
+
+@font-face
+{
+font-family: Generica;
+src: url('{{ site.baseurl }}/assets/fonts/Generica.otf');
+}
+
+@font-face
+{
+font-family: The Braggest;
+src: url('{{ site.baseurl }}/assets/fonts/The Braggest_Demo.otf');
+}
+
+.container {
+	width: 90%;
+}
+
+.title {
+	h1 {
+		font-family: "The Braggest", sans-serif;
+		font-size: 70pt;
+		text-align: center;
+		letter-spacing: -2px;
+	}
+
+	margin-bottom: 30px;
+}
+
+
 img {
 	height: 400px;
 	width: 250px;
 	margin: 0 auto;
+}
+
+.content {
+	background-color: #fff;
+	width: 100%;
+	margin: 0;
+
+}
+.col-sm-9 {
+	padding: 0 !important;
 }
