--- a/sass/navbar.scss
+++ b/sass/navbar.scss
@@ -4,82 +4,82 @@
 
 
 .navbar-default {
-	background-color: #a8a8a8;
-	.navbar-brand { 
-		color: white;
-		position: relative; 
-		z-index: 2; 
+	background-color: #a8a8a8 !important;
+	.navbar-brand {
+		color: white !important;
+		position: relative;
+		z-index: 2;
 	}
 }
 
-.navbar-nav .navbar-right .btn { 
+.navbar-nav .navbar-right .btn {
 	position: relative; z-index: 2;
-  padding: 4px 20px; margin: 10px auto; 
+  padding: 4px 20px; margin: 10px auto;
 }
 
 .navbar .navbar-collapse {
-	position: relative; 
+	position: relative;
 }
 
-.navbar .navbar-collapse .navbar-right > li:last-child { 
+.navbar .navbar-collapse .navbar-right > li:last-child {
 	padding-left: 22px;
 }
 
-.navbar .nav-collapse { 
+.navbar .nav-collapse {
 	position: absolute;
-	z-index: 1; 
+	z-index: 1;
 	top: 0;
 	left: 0;
 	right: 0;
 	bottom: 0;
 	margin: 0;
-	padding-right: 120px; 
-	padding-left: 80px; 
-	width: 100%; 
+	padding-right: 120px;
+	padding-left: 80px;
+	width: 100%;
 }
 
 
-.navbar .navbar-default .nav-collapse { 
-	background-color: #f8f8f8; 
+.navbar .navbar-default .nav-collapse {
+	// background-color: #f8f8f8;
 }
 
-.navbar.navbar-inverse .nav-collapse { 
-	background-color: #222; 
+.navbar.navbar-inverse .nav-collapse {
+	background-color: #222;
 }
 
-.navbar .nav-collapse .navbar-form { 
-	border-width: 0; box-shadow: none; 
+.navbar .nav-collapse .navbar-form {
+	border-width: 0; box-shadow: none;
 }
 
-.nav-collapse>li { 
-	float: right; 
+.nav-collapse>li {
+	float: right;
 }
 
-.btn.btn-circle { 
-	border-radius: 50px; 
+.btn.btn-circle {
+	border-radius: 50px;
 }
 
-.btn.btn-outline { 
-	background-color: transparent; 
+.btn.btn-outline {
+	background-color: transparent;
 }
 
 @media screen and (max-width: 767px) {
-    .navbar .navbar-collapse .navbar-right > li:last-child { 
-    	padding-left: 15px; padding-right: 15px; 
-    } 
-    .navbar .nav-collapse { 
-    	margin: 7.5px auto; padding: 0; 
+    .navbar .navbar-collapse .navbar-right > li:last-child {
+    	padding-left: 15px; padding-right: 15px;
     }
-    .navbar .nav-collapse .navbar-form { 
-    	margin: 0; 
+    .navbar .nav-collapse {
+    	margin: 7.5px auto; padding: 0;
     }
-    .nav-collapse>li { 
-    	float: none; 
+    .navbar .nav-collapse .navbar-form {
+    	margin: 0;
+    }
+    .nav-collapse>li {
+    	float: none;
     }
 }
 
 // STUFF IVE ADDED
 
 .navbar-default .navbar-nav > li > a {
-	color: white;
+	color: white !important;
 }
