--- a/sass/blog.scss
+++ b/sass/blog.scss
@@ -1,23 +1,18 @@
 ---
 ---
 @import "bootstrap";
+$box-background: #eee;
+$bar-height: 12px;
+$bar-color: white;
+$bar-color-highlight: #e4514f;
+$bar-text: "Read more...";
+$transition: all 0.25s;
 
-@font-face
-{
-font-family: Code;
-src: url('{{ site.baseurl }}/assets/fonts/CODE_Bold.woff');
-}
+.container-fluid {
+	width: 100%;
+	margin: 0 auto;
+	padding: 0px;
 
-@font-face
-{
-font-family: Generica;
-src: url('{{ site.baseurl }}/assets/fonts/Generica.otf');
-}
-
-@font-face
-{
-font-family: The Braggest;
-src: url('{{ site.baseurl }}/assets/fonts/The Braggest_Demo.otf');
 }
 
 .container {
@@ -42,12 +37,95 @@ img {
 	margin: 0 auto;
 }
 
+
+.col-sm-9 {
+	padding: 0 !important;
+}
+
+// Article Thumbnails
 .content {
 	background-color: #fff;
 	width: 100%;
 	margin: 0;
+  text-align: center;
+  .container {
+		width: 100%;
+		padding: 20px;
+	}
 
+	// .row {
+	// 	display: flex;
+  //   flex-flow: row wrap;
+  //   align-items: stretch;
+	// }
+  // .col {
+	// 	flex: 0 0 (100%/2);
+  //   padding: 1em;
+	// }
+
+	h1 {
+		font-family: "Generica", sans-serif;
+		font-size: 25pt;
+		text-transform: uppercase;
+		letter-spacing: 0px;
+		line-height: 5px;
+		color: #787878;
+	}
+
+	h2 {
+		font-family: "Code", sans-serif;
+		font-size: 14pt;
+		letter-spacing: 3px;
+		line-height: 1px;
+		color: #b0b0b0;
+	}
+
+	p {
+		font-family: "PT Serif", serif;
+		font-size: 15pt;
+		color: #666;
+	}
 }
-.col-sm-9 {
-	padding: 0 !important;
+
+.image {
+	position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 50%;
+  background: #c0c0c0;
+  cursor: pointer;
+
+	&:before,
+		&:after {
+			position: absolute;
+			left: 10%;
+			content: '';
+			display: block;
+			height: $bar-height;
+			z-index: 0;
+		}
+
+		&:before {
+			top: 25%;
+			border-bottom: $bar-height solid $bar-color;
+			border-top: $bar-height solid $bar-color;
+			padding-top: $bar-height * 0.5;
+			width: 80%;
+		}
+
+		&:after {
+			top: calc(25% + ($bar-height * 5));
+			background: $bar-color;
+			color: $bar-color;
+			width: 55%;
+			content: $bar-text;
+			font-weight: bold;
+			font-size: $bar-height;
+			text-transform: uppercase;
+			padding: 0 $bar-height/2;
+		}
+	// img {
+	// 	width: 100%;
+	// 	height: 100%;
+	// }
 }
