--- a/sass/index.scss
+++ b/sass/index.scss
@@ -9,15 +9,15 @@
 .header {
 	margin: 0 auto; 
 	margin-top: 80px;
-	margin-bottom: 80px;
+	margin-bottom: 50px;
 	width: 90vw;
 	height: 40vh;
-	background-color: white;
-}
+	background-color: #9286a8;
+} 
 
 .welcome {
 	margin: 0 auto;
-	width: 100vw;
+	width: 95%;
 	max-width: 100%;
 	background-color: white;
 	.welcome-left {
@@ -26,26 +26,64 @@
 	.welcome-left {
 		h1 {
 			font-color: black;
+			margin-top: 10px;
 		}
 		p {
 			font-size: 14pt;
 		}
+		// BUTTTON CSS
+		.btn-lg {
+			font-size: 18px;
+			line-height: 1.33;
+			border-radius: 0px;
+			margin-top: 20px;
+		}
+		.btn.outline {
+			background: none;
+			padding: 12px 42px;
+		}
+		.btn-primary.outline {
+			border: 2px solid #a8a8a8;
+			color: #a8a8a8;
+		}
+		.btn-primary.outline:hover, .btn-primary.outline:focus, .btn-primary.outline:active, .btn-primary.outline.active, .open > .dropdown-toggle.btn-primary {
+			color: #000;
+			border-color: #000;
+		}
+		.btn-primary.outline:active, .btn-primary.outline.active {
+			border-color: #a8a8a8;
+			color: #a8a8a8;
+			box-shadow: none;
+		}
+		.btn {
+			padding: 14px 24px;
+			border: 0 none;
+			font-weight: 700;
+			letter-spacing: 1px;
+			text-transform: uppercase;
+		}
+		.btn:focus, .btn:active:focus, .btn.active:focus {
+			outline: 0 none;
+		}
+		// END BUTTON CSS
 	}
 	.welcome-right {
 		height: 100%;
-		max-height:500px;
+		min-height:440px;
+		min-width:320px;
 		padding: 15px;
 		overflow: hidden;
+		text-align: center;
 		img {
- 			width: 100%;
-			height: 100%;
-			max-height: 440px;
+			width: 320px;
+			height: 440px;
 		}
 	}
 }
 
+
 h2 {
-	margin-top:80px;
+	margin-top:50px;
 	color: #444444;
 	text-align: center;
 	font-size: 32pt;
@@ -53,32 +91,39 @@ h2 {
 
 .carousel {
 	margin: 0 auto;
-	margin-bottom: 80px;
+	margin-bottom: 50px;
 	width: 90vw;
-	height: 400px;
-	background-color: white;
+	height: 450px;
+	background-color: #9286a8;
 }
 
-.blag {
+.blog {
 	margin: 0 auto;
-	margin-bottom: 80px;
+	margin-bottom: 50px;
 	width: 90vw;
-	height: 90vh;
-	min-height: 600px;
+	height: 80vh;
+	min-height:300px;
 	background-color: white;
-	.section {
+	.row {
+		height:40vh;
+		width:100%;
+		min-height:150px;
+		text-align:center;
+		margin: 0 auto; 
+	}
+	.col-sm-6 {
 		background-color: white;
-		height: 45vh;
-		min-height: 300px;
+		height: 100%;
+		width: 50%;
 		.travel {
-			background-color: #afbfd8;
+			background-color: #9286a8;
 			height: 90%;
 			width: 90%;
 			margin: 0 auto;
 			margin-top:10px;
 		}
 		.career {
-			background-color: #afbfd8;
+			background-color: #9286a8;
 			height: 90%;
 			width: 90%;
 			margin: 0 auto;
@@ -86,14 +131,14 @@ h2 {
 
 		}
 		.life {
-			background-color: #afbfd8;
+			background-color: #9286a8;
 			height: 90%;
 			width: 90%;
 			margin: 0 auto;
 			margin-bottom: 10px;
 		}
 		.minimalism {
-			background-color: #afbfd8;
+			background-color: #9286a8;
 			height: 90%;
 			width: 90%;		
 			margin: 0 auto;
@@ -104,20 +149,132 @@ h2 {
 
 .subscribe {
 	max-width:100%;
+	margin-bottom:20px;
+	margin-top: 40px;
 	.subscribe-box {
 		background-color: #e2e2e2;
+		margin: 0 auto;
+		width: 93%;
 		height: 300px;
 		margin-bottom: 20px;
 	}
-	h1 {
-		font-size: 40pt;
-		text-align: center;
+}
+
+.email-full {
+  width: 80%;
+  margin: 0 auto;
+  padding: 20px;
+  h2 {
+  	margin-top: 10px;
+    text-align: center;
+  }
+  p {
+  	font-size: 14pt;
+    margin: 20px;
+  }
+}
+
+button, input, textarea {
+  color: inherit; /* 1 */
+  font: inherit; /* 2 */
+  margin: 0; /* 3 */
+}
+*, :after, :before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.ajax-form {
+  width: 100%;
+}
+.ajax-form input,
+.ajax-form textarea {
+  padding: 20px;
+  border: 0;
+  background: #fff;
+  border: 3px solid #fff;
+  outline: none;
+  -webkit-transition: all .25s ease-in-out;
+  -moz-transition: all .25s ease-in-out;
+  -o-transition: all .25s ease-in-out;
+  transition: all .25s ease-in-out;
+  height: 40px;
+}
+
+.ajax-form input:focus,
+.ajax-form textarea:focus {
+    border: 4px solid #e2e2e2;
+    color: #424651;
+}
+
+.ajax-form input[type="submit"] {
+  border: 3px solid #4c4c4c;
+  color: #fff;
+  padding: 20px;
+  background-color: #4c4c4c;
+}
+.ajax-form input[type="submit"]:hover {
+  background-color: #4c4c4c;
+  border: 3px solid #4c4c4c;
+  color: white;
+}
+.name, .email {
+  width: 90%; 
+}
+.message {
+  width: 100%;
+}
+.form-btn {
+  text-align: center;
+  padding: 10px;
+}
+.error {
+  border: 3px solid #ED1941 !important;
+}
+.form-thank-you {
+  display: none;
+  width: 100%;
+  text-align: center;
+}
+.form-thank-you h3 { padding-top: 15px; }
+@media (max-width: 577px) {
+  .name, .email {
+    width: 100%;
+    float: none;
+  }
+}
+
+.col-sm-3 {
+	.btn-lg {
+		font-size: 18px;
+		line-height: 1.33;
+		border-radius: 0px;
 	}
-	p {
-		font-size: 14pt;
-		text-align: center;
+	.btn.outline {
+		background: none;
+		padding: 12px 42px;
 	}
-	h4 {
-		text-align: center;
+	.btn-primary.outline {
+		border: 2px solid #a8a8a8;
+		color: #a8a8a8;
+	}
+	.btn-primary.outline:hover, .btn-primary.outline:focus, .btn-primary.outline:active, .btn-primary.outline.active, .open > .dropdown-toggle.btn-primary {
+		color: #000;
+		border-color: #000;
+	}
+	.btn-primary.outline:active, .btn-primary.outline.active {
+		border-color: #a8a8a8;
+		color: #a8a8a8;
+		box-shadow: none;
+	}
+	.btn {
+		padding: 14px 24px;
+		border: 0 none;
+		font-weight: 700;
+		letter-spacing: 1px;
+		text-transform: uppercase;
+	}
+	.btn:focus, .btn:active:focus, .btn.active:focus {
+		outline: 0 none;
 	}
 }
