--- a/sass/blog.scss
+++ b/sass/blog.scss
@@ -65,18 +65,21 @@ img {
 
 	h1 {
 		font-family: "Generica", sans-serif;
-		font-size: 25pt;
+		font-size: 26pt;
 		text-transform: uppercase;
 		letter-spacing: 0px;
-		line-height: 5px;
 		color: #787878;
+		padding: 0;
+		margin:  20px 0 0 0;
 	}
 
 	h2 {
 		font-family: "Code", sans-serif;
 		font-size: 14pt;
+		line-height: 15pt;
 		letter-spacing: 3px;
-		line-height: 1px;
+    padding: 0;
+		margin: 0;
 		color: #b0b0b0;
 	}
 
