--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="{{ site.baseurl }}/sass/blog.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/sass/navbar.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/sass/footer.css">
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
