--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="{{ site.baseurl }}/sass/default.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/sass/navbar.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/sass/footer.css">
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
