--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -13,9 +13,8 @@
   color: #fff !important;
   padding: 30px;
   overflow: hidden;
-}
 
-.footer h3 {
+ h3 {
   font-size: 20pt;
   text-transform: uppercase;
   font-family: sans-serif;
@@ -34,7 +33,7 @@
   text-align: right;
 }
 
-.footer input[type="text"] {
+input[type="text"] {
   width: 100%;
   height: 36px;
   padding: 5px 30px 5px 8px;
@@ -51,7 +50,7 @@
 	}
 }
 
-.footer button[type="submit"] {
+ button[type="submit"] {
     right: 0;
     height: 36px;
     width: 100%;
@@ -91,4 +90,5 @@
 
 .col-sm-4 {
   text-align: center;
+}
 }
