--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -4,7 +4,7 @@
 <html lang="en-US">
 
 <head>
-<link rel="stylesheet" href="{{ site.baseurl }}/sass/blog.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/sass/article.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/sass/navbar.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/sass/footer.css">
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -22,7 +22,17 @@
 
 <div class="row">
 <div class="col-sm-9 content">
+
+
+  <div class="article">
+   <h1> {{ page.title }} </h1>
+    <h2> {{ page.category }} // {{ page.date | date: '%B %d, %Y' }}</h2>
+
 {{ content }}
+
+  </div>
+
+
 </div>
 
 
