--- a/sass/start.scss
+++ b/sass/start.scss
@@ -1,7 +1,25 @@
 ---
 ---
 
-@import "bootstrap";
+@import "default";
+
+@font-face
+{
+font-family: Code;
+src: url("{{ site.baseurl }}/assets/fonts/CODE_Bold.woff");
+}
+
+@font-face
+{
+font-family: Generica;
+src: url("{{ site.baseurl }}/assets/fonts/Generica.otf");
+}
+
+@font-face
+{
+font-family: The Braggest;
+src: url("{{ site.baseurl }}/assets/fonts/The Braggest_Demo.otf");
+}
 
 .container-fluid {
 	width: 100%;
