--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,17 +12,17 @@
         </button>
      <!--    <a class="navbar-brand navbar-right" href="#">Brand</a> -->
       </div>
-  
+
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="navbar-collapse-1">
         <ul class="nav navbar-nav navbar-left">
-          <li><a href="{{ site.baseurl }}/">Home</a></li>
-          <li><a href="{{ site.baseurl }}/blog/">Blog</a></li>
+          <li><a href="{{ site.baseurl }}/travel/">Travel</a></li>
+          <li><a href="{{ site.baseurl }}/blog/">Lifestyle Design</a></li>
           <li><a href="{{ site.baseurl }}/about/">About</a></li>
           <li><a href="{{ site.baseurl }}/contact/">Contact</a></li>
           <li><a href="{{ site.baseurl }}/start/">Start Here</a></li>
         </ul>
-        <a class="navbar-brand navbar-right" href="#">Brand</a>
+        <a class="navbar-brand navbar-right" href="#">NV</a>
 
         <ul class="collapse nav navbar-nav nav-collapse" id="nav-collapse1">
           <li><a href="#">Web design</a></li>
