--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -17,7 +17,7 @@
 <br>
 <div class="container">
   <div class="row title">
-    <h1>Blog Name</h1>
+    <h1>Noble Vita</h1>
   </div>
 
 <div class="row">
