--- a/sass/index.scss
+++ b/sass/index.scss
@@ -28,8 +28,6 @@ src: url("{{ site.baseurl }}/assets/fonts/The Braggest_Demo.otf");
 	margin: 0 auto;
 	width: 100%;
 	height: 100vh;
-	background-color: white;
-	text-align: center;
 	background: url("{{ site.baseurl }}/assets/images/header.jpg") no-repeat center center;
 	background-size: cover;
   background-attachment: fixed;
@@ -53,6 +51,40 @@ h2 {
 	color: white;
 
 }
+
+.btn-lg {
+	font-size: 14px;
+	line-height: 1.33;
+	border-radius: 0px;
+	margin-top: 20px;
+}
+.btn.outline {
+	background: none;
+	padding: 6px 20px;
+}
+.btn-primary.outline {
+	border: 3px solid #fff;
+	color: #fff;
+}
+.btn-primary.outline:hover, .btn-primary.outline:focus, .btn-primary.outline:active, .btn-primary.outline.active, .open > .dropdown-toggle.btn-primary {
+	color: #cdb897;
+	border-color: #cdb897;
+}
+.btn-primary.outline:active, .btn-primary.outline.active {
+	border-color: #fff;
+	color: #fff;
+	box-shadow: none;
+}
+.btn {
+	padding: 14px 24px;
+	border: 0 none;
+	font-weight: 700;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+}
+
+
+
 }
 }
 
@@ -61,23 +93,30 @@ h2 {
 	margin: 0 auto;
 	width: 100%;
 	background-color: white;
+	-webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 	.welcome-left {
 		padding: 20px;
 	}
 	.welcome-left {
 		h1 {
-			font-family: $title;
-			font-size: 26pt;
-			text-transform: uppercase;
+			font-family: "The Braggest", sans-serif;
+			font-size: 75pt;
+			// text-transform: uppercase;
 			letter-spacing: 0px;
-			color: #787878;
+			color: #71837e;
 			padding: 0;
-			margin:  20px 0 0 0;
+			// margin:  0 0 -10px 20px;
 		}
 		p {
-			font-family: "PT Serif", serif;
+			font-family: "Georgia", serif;
 			font-size: 15pt;
 			color: #666;
+			text-indent: 50px;
+
+		}
+		.catch {
+			font-size: 18pt;
 		}
 		// BUTTTON CSS
 		.btn-lg {
