--- a/sass/sidebar.scss
+++ b/sass/sidebar.scss
@@ -10,7 +10,7 @@
 	color: #c0c0c0;
   font-family: "PT Serif", serif;
   font-size: 15pt;
-  padding: 10px;
+  padding: 0 10px 10px 10px;
 
   a, a:active {
     color: #b1b1b1;
@@ -18,7 +18,7 @@
   }
 
   a:hover {
-    color: #cdb897;
+    color: #4391ab;
   }
 
 	img {
