--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@
 <html lang="en-US">
 
 <head>
-<link rel="stylesheet" href="{{ site.baseurl }}/sass/default.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/sass/main.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/sass/navbar.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/sass/footer.css">
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
