--- a/sass/blog.scss
+++ b/sass/blog.scss
@@ -101,8 +101,8 @@ img {
 		background-color: white;
     padding-left: 0 !important;
 		padding-right: 0 !important;
-		margin: 10px;
-		width: calc(50% - 20px);
+		// margin: 10px;
+		// width: calc(50% - 20px);
 	}
 
 
