--- a/sass/index.scss
+++ b/sass/index.scss
@@ -100,19 +100,20 @@ h2 {
 	}
 	.welcome-left {
 		h1 {
-			font-family: "The Braggest", sans-serif;
-			font-size: 75pt;
-			// text-transform: uppercase;
+			font-family: "Generica", sans-serif;
+			font-size: 34pt;
+			text-align: center;
+			text-transform: uppercase;
 			letter-spacing: 0px;
-			color: #71837e;
+			color: #9b9b9b;
 			padding: 0;
 			// margin:  0 0 -10px 20px;
 		}
 		p {
-			font-family: "Georgia", serif;
+			font-family: 'Avenir', sans-serif;
 			font-size: 15pt;
 			color: #666;
-			text-indent: 50px;
+			text-indent: 30px;
 
 		}
 		.catch {
@@ -176,79 +177,157 @@ h2 {
 	font-size: 32pt;
 }
 
-.carousel {
-	margin: 0 auto;
-	margin-bottom: 50px;
-	width: 90vw;
-	height: 450px;
-	// background-color: #9286a8;
+// featured// TOP ARTICLES
+
+.top {
+  margin: 40px 0 40px 0;
+
+  .col-sm-4 {
+    padding-left: 15px !important;
+    padding-right: 15px !important;
+  }
+
+  .image {
+    position: relative;
+    overflow: hidden;
+    padding-bottom: 100%;
+
+    img {
+      position: absolute;
+      height: 100%;
+      width: auto;
+      min-width: 100%;
+    }
+
+    .overlay {
+      background-color: rgba(100,100,100,0.2);
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+
+      &:hover {
+        background-color: rgba(100,100,100,0.6);
+        // -webkit-transition: all 0.4s ease-in-out;
+        // -moz-transition: all 0.4s ease-in-out;
+        // -o-transition: all 0.4s ease-in-out;
+        // transition: all 0.4s ease-in-out;
+      }
+  }
+
+    .caption {
+      width: 80%;
+      text-align: center;
+      margin: auto;
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+
+
+    .maincaption {
+    width: 100%;
+    h1 {
+      padding: 0;
+      margin: 0;
+      color: #fff !important;
+      font-family: 'Bebas Neue', sans-serif;
+      letter-spacing: 3px;
+      font-size: 32pt;
+    }
+    }
+
+    .subcaption {
+    width: 100%;
+
+
+    h2 {
+      font-family: 'Avenir', sans-serif;
+      color: #fff;
+      font-size: 16pt;
+    }
+    }
+    }
+  }
 }
 
-.blog {
-	margin: 0 auto;
-	margin-bottom: 50px;
-	width: 90vw;
-	height: 80vh;
-	min-height:300px;
-	background-color: white;
-	.row {
-		height:40vh;
-		width:100%;
-		min-height:150px;
-		text-align:center;
-		margin: 0 auto;
-	}
-	.col-sm-6 {
-		background-color: white;
-		height: 100%;
-		width: 50%;
-		.travel {
-			background-color: #9286a8;
-			height: 90%;
-			width: 90%;
-			margin: 0 auto;
-			margin-top:10px;
-		}
-		.career {
-			background-color: #9286a8;
-			height: 90%;
-			width: 90%;
-			margin: 0 auto;
-			margin-top: 10px;
 
-		}
-		.life {
-			background-color: #9286a8;
-			height: 90%;
-			width: 90%;
-			margin: 0 auto;
-			margin-bottom: 10px;
-		}
-		.minimalism {
-			background-color: #9286a8;
-			height: 90%;
-			width: 90%;
-			margin: 0 auto;
-			margin-bottom: 10px;
-		}
+.blog {
+	background-color: white;
+	margin-bottom: 40px;
+	padding: 30px;
+
+	h2 {
+		font-family: "Bebas Neue", sans-serif;
+		letter-spacing: 3px;
+		font-size: 20pt;
+	}
+
+.col-sm-6 {
+	padding: 50px;
+}
+
+.containervid {
+padding-top: 58px;
+
+}
+
+#video {
+margin:auto;
+position: relative;
+padding-bottom: 56.25%;
+padding-top: 25px;
+}
+#video iframe {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+}
+
+	h1 {
+		font-family: "Generica", sans-serif;
+		font-size: 34pt;
+		text-align: center;
+		text-transform: uppercase;
+		letter-spacing: 0px;
+		color: #9b9b9b;
+		padding: 0;
+		// margin:  0 0 -10px 20px;
 	}
 }
 
 .subscribe {
-	max-width:100%;
-	margin-bottom:20px;
-	margin-top: 40px;
-	.subscribe-box {
-		background-color: #e2e2e2;
-		margin: 0 auto;
-		width: 93%;
-		height: 300px;
-		margin-bottom: 20px;
+	h1 {
+		font-family: "Generica", sans-serif;
+		font-size: 34pt;
+		text-align: center;
+		text-transform: uppercase;
+		letter-spacing: 0px;
+		color: #9b9b9b;
+		padding: 0;
+		// margin:  0 0 -10px 20px;
 	}
+
+  margin-bottom: 40px;
+
+	p {
+		font-family: 'Avenir', sans-serif;
+	}
+
 }
 
 .email-full {
-  width: 80%;
+  width: 70%;
   margin: 0 auto;
   padding: 20px;
   h2 {
@@ -280,35 +359,57 @@ button, input, textarea {
 }
 .ajax-form input,
 .ajax-form textarea {
-  padding: 20px;
-  border: 0;
-  background: #fff;
-  border: 3px solid #fff;
-  outline: none;
-  -webkit-transition: all .25s ease-in-out;
-  -moz-transition: all .25s ease-in-out;
-  -o-transition: all .25s ease-in-out;
-  transition: all .25s ease-in-out;
-  height: 40px;
+	padding: 20px;
+	color: #575757;
+	background: #f7f7f7;
+	border: 1px solid #ccc;
+	border-radius: 3px;
+	outline: none;
+	-webkit-transition: all .25s ease-in-out;
+	-moz-transition: all .25s ease-in-out;
+	-o-transition: all .25s ease-in-out;
+	transition: all .25s ease-in-out;
+	height: 40px;
+	margin-bottom: 20px;
+	width: 100%;
 }
 
 .ajax-form input:focus,
 .ajax-form textarea:focus {
-    border: 4px solid #e2e2e2;
-    color: #424651;
+	border: 1px solid #ccc;
+  background-color: #fff;
 }
 
 .ajax-form input[type="submit"] {
-  border: 3px solid #4c4c4c;
-  color: #fff;
-  padding: 20px;
-  background-color: #4c4c4c;
-}
-.ajax-form input[type="submit"]:hover {
-  background-color: #4c4c4c;
-  border: 3px solid #4c4c4c;
-  color: white;
-}
+	font-family: 'Generica', sans-serif !important;
+	text-transform: uppercase;
+	font-size: 16px;
+	padding: 2px 20px 0 20px;
+	display: table-cell;
+	vertical-align: middle !important;
+	border-radius: 0;
+	text-align: center;
+	background-color: #626262 !important;
+	color: white !important;
+	border: none;
+	outline: none;
+	height: 40px;
+
+	&:hover {
+		background-color: #515151 !important;
+		outline: none;
+		-webkit-transition: all 0.4s ease-in-out;
+		-moz-transition: all 0.4s ease-in-out;
+		-o-transition: all 0.4s ease-in-out;
+		transition: all 0.4s ease-in-out;
+	}
+	&:focus {
+		color: #515151 !important;
+		border: none;
+		outline: none;
+			}
+		}
+
 .name, .email {
   width: 90%;
 }
@@ -335,39 +436,35 @@ button, input, textarea {
   }
 }
 
-.col-sm-3 {
-	.btn-lg {
-		font-size: 18px;
-		line-height: 1.33;
-		border-radius: 0px;
-	}
-	.btn.outline {
-		background: none;
-		padding: 12px 42px;
-	}
-	.btn-primary.outline {
-		border: 2px solid #a8a8a8;
-		color: #a8a8a8;
-	}
-	.btn-primary.outline:hover, .btn-primary.outline:focus, .btn-primary.outline:active, .btn-primary.outline.active, .open > .dropdown-toggle.btn-primary {
-		color: #000;
-		border-color: #000;
-	}
-	.btn-primary.outline:active, .btn-primary.outline.active {
-		border-color: #a8a8a8;
-		color: #a8a8a8;
-		box-shadow: none;
-	}
-	.btn {
-		padding: 14px 24px;
-		border: 0 none;
-		font-weight: 700;
-		letter-spacing: 1px;
-		text-transform: uppercase;
-	}
-	.btn:focus, .btn:active:focus, .btn.active:focus {
-		outline: 0 none;
-	}
+.start {
+  font-family: 'COUTUREBold', sans-serif !important;
+  font-weight: 900;
+  text-transform: uppercase;
+  font-size: 16px;
+  padding: 2px 20px 0 20px;
+  display: table-cell;
+  vertical-align: middle !important;
+  border-radius: 0;
+  text-align: center;
+  background-color: #626262 !important;
+  color: white !important;
+  border: none;
+  outline: none;
+  height: 40px;
+
+  &:hover {
+    background-color: #515151 !important;
+    outline: none;
+    -webkit-transition: all 0.4s ease-in-out;
+    -moz-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+  }
+  &:focus {
+    color: #515151 !important;
+    border: none;
+    outline: none;
+      }
 }
 
 // SLIDER
