--- a/_includes/navbar2.html
+++ b/_includes/navbar2.html
@@ -16,8 +16,8 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="navbar-collapse-1">
         <ul class="nav navbar-nav navbar-left">
-          <li><a href="{{ site.baseurl }}/travel/">Travel</a></li>
-          <li><a href="{{ site.baseurl }}/blog/">Lifestyle Design</a></li>
+          <li><a href="{{ site.baseurl }}/blog/">Blog</a></li>
+          <li><a href="{{ site.baseurl }}/lifestyle/">Lifestyle Design</a></li>
           <li><a href="{{ site.baseurl }}/about/">About</a></li>
           <li><a href="{{ site.baseurl }}/contact/">Contact</a></li>
           <li><a href="{{ site.baseurl }}/start/">Start Here</a></li>
@@ -25,12 +25,11 @@
         <a class="navbar-brand navbar-right" href="{{ site.baseurl }}/">NV</a>
 
         <ul class="collapse nav navbar-nav nav-collapse" id="nav-collapse1">
-          <li><a href="#">Web design</a></li>
-          <li><a href="#">Development</a></li>
-          <li><a href="#">Graphic design</a></li>
-          <li><a href="#">Print</a></li>
-          <li><a href="#">Motion</a></li>
-          <li><a href="#">Mobile apps</a></li>
+          <li><a href="{{ site.baseurl }}/blog/">Blog</a></li>
+          <li><a href="{{ site.baseurl }}/lifestyle/">Lifestyle Design</a></li>
+          <li><a href="{{ site.baseurl }}/about/">About</a></li>
+          <li><a href="{{ site.baseurl }}/contact/">Contact</a></li>
+          <li><a href="{{ site.baseurl }}/start/">Start Here</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container -->
