--- a/sass/blog.scss
+++ b/sass/blog.scss
@@ -99,10 +99,11 @@ img {
 
 	.col-sm-6 {
 		background-color: white;
-    padding-left: 0 !important;
+        padding-left: 0 !important;
 		padding-right: 0 !important;
-		// margin: 10px;
-		// width: calc(50% - 20px);
+		padding-top: 15px;
+		margin: 5px;
+		width: calc(50% - 10px);
 	}
 
 
