--- a/sass/index.scss
+++ b/sass/index.scss
@@ -89,16 +89,21 @@ h2 {
 }
 
 
-.welcome {
+.welcome-container {
 	margin: 0 auto;
+  padding: 20px;
 	width: 100%;
 	background-color: white;
 	-webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-	.welcome-left {
-		padding: 20px;
-	}
-	.welcome-left {
+
+  .welcome {
+    width: 80%;
+    margin: 0 auto;
+    padding: 0;
+
+
+
 		h1 {
 			font-family: "Generica", sans-serif;
 			font-size: 34pt;
@@ -155,18 +160,7 @@ h2 {
 		}
 		// END BUTTON CSS
 	}
-	.welcome-right {
-		height: 100%;
-		min-height:440px;
-		min-width:320px;
-		padding: 15px;
-		overflow: hidden;
-		text-align: center;
-		img {
-			width: 320px;
-			height: 440px;
-		}
-	}
+	
 }
 
 
