--- a/_layouts/lifestyle.html
+++ b/_layouts/lifestyle.html
@@ -4,7 +4,7 @@
 <html lang="en-US">
 
 <head>
-<link rel="stylesheet" href="{{ site.baseurl }}/sass/blog.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/sass/lifestyle.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/sass/navbar2.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/sass/footer.css">
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -40,7 +40,7 @@
 
 
 <div class="col-sm-3 sidebar">
-{% include sidebar2.html %}
+{% include sidebar.html %}
 </div>
 </div>
 
